RESOLVED FIXED48453
REGRESSION(66511): CORDYS Process Factory doesn't work
https://bugs.webkit.org/show_bug.cgi?id=48453
Summary REGRESSION(66511): CORDYS Process Factory doesn't work
Adam Barth
Reported 2010-10-27 12:28:21 PDT
REGRESSION(66511): CORDYS Process Factory doesn't work
Attachments
Patch (4.80 KB, patch)
2010-10-27 12:33 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-10-27 12:33:10 PDT
Ojan Vafai
Comment 3 2010-10-27 13:30:08 PDT
Comment on attachment 72071 [details] Patch Whoops. Thanks for the fix.
WebKit Commit Bot
Comment 4 2010-10-27 14:57:40 PDT
Comment on attachment 72071 [details] Patch Clearing flags on attachment: 72071 Committed r70718: <http://trac.webkit.org/changeset/70718>
WebKit Commit Bot
Comment 5 2010-10-27 14:57:47 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2010-10-27 21:46:41 PDT
+description("This test ensures that objects RGBColor objects return the correct values."); This looks like it came from another test.
Adam Barth
Comment 7 2010-10-27 21:52:46 PDT
(In reply to comment #6) > +description("This test ensures that objects RGBColor objects return the correct values."); > > This looks like it came from another test. Yep.
Note You need to log in before you can comment on or make changes to this bug.