2010-10-27  Adam Barth  <abarth@webkit.org>

Reviewed by Ojan Vafai.

        REGRESSION(66511): CORDYS Process Factory doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=48453

        Test some appendChild cases that didn't have coverage before.

        * fast/dom/allowed-children-expected.txt: Added.
        * fast/dom/allowed-children.html: Added.
2010-10-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Ojan Vafai.

        REGRESSION(66511): CORDYS Process Factory doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=48453

        When Ojan refactored this function in 66511, he missed an "else",
        which causes us to generated HIERARCHY_REQUEST_ERR in some cases where
        we're not supposed to.  This patch restores the "else" behavior (using
        an early return) and adds a test for the cases that caused problems in
        the field.

        Test: fast/dom/allowed-children.html

        * dom/Node.cpp:
        (WebCore::isChildTypeAllowed):

Canonical link: https://commits.webkit.org/61236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70718 268f45cc-cd09-0410-ab3c-d52691b4dbfc